--- a/HW2/hw2_solutions_ma.tex
+++ b/HW2/hw2_solutions_ma.tex
@@ -194,6 +194,8 @@ end
 \normalsize\tiny
 \lstinputlisting{nonlinear_solver.m}
 \normalsize\tiny
+\lstinputlisting{compute_residue.m}
+\normalsize\tiny
 \lstinputlisting{HW2.m}
 \normalsize
 
