--- a/HW3/hw3_solutions.lyx
+++ b/HW3/hw3_solutions.lyx
@@ -1187,7 +1187,7 @@ The diagonal elements of
 \end_inset
 
 , the coordinates are 
-\begin_inset Formula $(m_{1},...,m_{M})$
+\begin_inset Formula $(m_{1},...,m_{N})$
 \end_inset
 
 .
@@ -1226,7 +1226,7 @@ The diagonal elements of
 \begin_layout Standard
 \begin_inset Formula 
 \begin{eqnarray*}
-\boldsymbol{G}^{T}\boldsymbol{d} & = & (\boldsymbol{g_{1}}^{T}\boldsymbol{d},...,\boldsymbol{g_{M}}^{T}\boldsymbol{d})^{T}
+\boldsymbol{G}^{T}\boldsymbol{d} & = & (\boldsymbol{g_{1}}^{T}\boldsymbol{d},...,\boldsymbol{g_{N}}^{T}\boldsymbol{d})^{T}
 \end{eqnarray*}
 
 \end_inset
